--- a/style.css
+++ b/style.css
@@ -1,42 +1,69 @@
-h1 {
-  color: green;
-  font-size: 450%;
+#mainborder {
+  margin: auto;
+  background-color: #eaa949;
+}
+
+.row-header {
+  margin: auto;
+  width: 80%;
+  background-image: url(OpenRoad.jpg);
+  background-repeat: round;
+  background-size:cover;
+  background-position:center;
+  border: 2px solid grey;
+  border-radius: 20px;
+}
+
+img {
+  border-radius: 50%;
+}
+
+#header {
+  margin: auto;
+  color: #5a392d;
   font-family:cursive;
   text-align: center;
   text-shadow: 2px 2px yellow;
-}
-/*.row-top{
-  text-align: center;
-  height: 70px;
-  background-color: lightblue;
-  background-image: url(notarystamp.jpeg);
-  background-size: contain;
-  border: 4px solid yellow;
-  border-radius: 10px;
-  opacity: 0.3;
-  }*/
-
-.row-header {
-  text-align: center;
-  color: tan;
-  font-weight: bolder;
-  text-shadow: 1px 1px black;
   background-color: lightgrey;
-  background-image: url(OpenRoad.jpg);
-  background-repeat:no-repeat;
-  background-size:cover;
-  background-position:center;
+  background-size: auto;
+  border: 2px solid grey;
+  border-radius: 20px;
+  opacity: 0.80;
 }
 
+#services {
 
-
-/*#services{
-  color: red;
+  margin: auto;
   text-align: center;
-  opacity: 0.75;
+  font-family:cursive;
+  color: #01310c;
+  font-weight: bolder;
+  text-shadow: 1px 2px white;
+  background-color: lightgrey;
+  border-radius: 20px;
+  padding: 20px;
+  opacity: 0.80;
 }
-#contact{
-  color: grey;
+
+#contact {
+  margin: auto;
+  color: #01310c;
   text-align: center;
-  opacity: 0.75;
-}*/
+  text-shadow: 1px 1px white;
+  border: 2px solid;
+  background-color: lightgrey;
+  border-radius: 20px;
+  padding: 20px;
+  opacity: 0.80;
+}
+
+#legaldisclaim {
+  margin: auto;
+  width: 75%;
+  text-align: center;
+  background-color: #e4dd9c;
+  background-size: auto;
+  border: 2px solid grey;
+  border-radius: 10px;
+  opacity: 0.7;
+  }
