--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 
 .row-header {
   margin: auto;
-  width: 80%;
+  width: 90%;
   background-image: url(OpenRoad.jpg);
   background-repeat: round;
   background-size:cover;
   background-position:center;
   border: 2px solid grey;
   border-radius: 20px;
+  padding: 20px;
 }
 
 img {
@@ -20,6 +21,7 @@ img {
 
 #header {
   margin: auto;
+  width: 95%;
   color: #5a392d;
   font-family:cursive;
   text-align: center;
@@ -34,12 +36,14 @@ img {
 #services {
 
   margin: auto;
+  width: 85%;
   text-align: center;
   font-family:cursive;
   color: #01310c;
   font-weight: bolder;
   text-shadow: 1px 2px white;
   background-color: lightgrey;
+  border: 2px solid grey;
   border-radius: 20px;
   padding: 20px;
   opacity: 0.80;
@@ -47,11 +51,12 @@ img {
 
 #contact {
   margin: auto;
+  width: 85%;
   color: #01310c;
   text-align: center;
   text-shadow: 1px 1px white;
-  border: 2px solid;
   background-color: lightgrey;
+  border: 2px solid grey;
   border-radius: 20px;
   padding: 20px;
   opacity: 0.80;
@@ -67,3 +72,10 @@ img {
   border-radius: 10px;
   opacity: 0.7;
   }
+
+#contactbuttons {
+  margin: auto;
+  justify-content: center;
+  border: 2px solid yellow;
+  border-radius: 10px;
+}
