--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #mainborder {
   margin: auto;
-  background-color: #eaa949;
+  background-color: #e2b97d;
 }
 
 /*background image of services and contact sections*/
@@ -8,9 +8,9 @@
   margin: auto;
   width: 90%;
   background-image: url(teton.jpeg);
-  background-repeat:no-repeat: round;
-  background-size:cover;
-  background-position:center;
+  background-repeat: no-repeat: round;
+  background-size: cover;
+  background-position: center;
   border: 2px solid grey;
   border-radius: 20px;
   padding: 20px;
@@ -28,17 +28,17 @@ img {
 #header {
   margin: auto;
   width: 95%;
-  color: #5a392d;
+  color: black;
   font-family: 'Caveat', cursive;
   text-align: center;
   text-shadow: 2px 2px yellow;
-  background-image: linear-gradient(to bottom right, #8bc34a, #cbe4af);
+  background-image: linear-gradient(to bottom right, #203a09, #e3e4dd);
   background-color: lightgrey;
   background-size: auto;
-  border: 2px solid grey;
+  border: 2px solid #f9d054;
   border-radius: 60px;
   padding: 20px;
-  opacity: 0.60;
+  opacity: 0.80;
 }
 
 #services {
@@ -46,10 +46,11 @@ img {
   margin: auto;
   width: 85%;
   text-align: center;
-  font-family: 'Caveat', cursive;
-  color: #01310c;
+  /*font-family: 'Caveat', bolder;*/
+  color: white;
   font-weight: bolder;
-  text-shadow: 1px 2px white;
+  text-shadow: 1px 2px black;
+  background-image: linear-gradient(to bottom right, #203a09, #e3e4dd);
   background-color: lightgrey;
   border: 2px solid grey;
   border-radius: 20px;
@@ -61,9 +62,8 @@ img {
   margin: auto;
   width: 85%;
   color: #01310c;
-  font-family: 'Caveat', cursive;
   text-align: center;
-  text-shadow: 1px 1px white;
+  background-image: linear-gradient(to bottom right, #4b4d58, #e3e4dd);
   background-color: lightgrey;
   border: 2px solid grey;
   border-radius: 20px;
@@ -74,12 +74,8 @@ img {
 #legaldisclaim {
   margin: auto;
   width: 75%;
-  font-family: 'Caveat', cursive;
   text-align: center;
-  background-color: #e4dd9c;
   background-size: auto;
-  border: 2px solid grey;
-  border-radius: 10px;
   opacity: 0.7;
   }
 
