--- a/style.css
+++ b/style.css
@@ -18,22 +18,21 @@
 
 .accordion-button {
   font-size: 20px !important;
-
 }
 
 /*rounding FB icon*/
 #fbicon {
   border-radius: 50%;
 }
-
+/*payment option icons*/
 #amex, #mcicon, #vicon, #ppicon, #vmicon {
-  width: 100px;
+  width: 90px;
 }
 
 #accordionicons {
-  margin: auto;
-  max-width: 70px;
-  padding: 5px;
+  margin: left;
+  max-width: 85px;
+  padding: 10px;
 }
 
 #header {
@@ -78,7 +77,7 @@
   background-color: lightgrey;
   border: 2px solid grey;
   border-radius: 20px;
-  padding: 20px;
+  padding: 10px;
   opacity: 0.90;
   margin-bottom: 10px;
 }
