--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .row-header {
   margin: auto;
   width: 90%;
-  background-image: url(teton.jpeg);
+  background-image: url(assets/teton.jpeg);
   background-repeat: no-repeat: round;
   background-size: cover;
   background-position: center;
@@ -32,8 +32,17 @@ opacity: 1;
 }
 
 /*payment option icons*/
-#amex, #mcicon, #vicon, #ppicon, #vmicon {
-  width: 90px;
+#axicon, #mcicon, #vsicon, #ppicon, #dcicon, #apicon {
+  width: 5rem;
+  height: 5rem;
+  order: 3px solid white;
+}
+#vmicon, #goicon {
+  margin-left: 5px;
+  width: 4.7rem;
+  height: 2.8rem;
+  border: 3px solid grey;
+  border-radius: 7px;
 }
 
 #accordionicons {
