--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ opacity: 1;
   order: 3px solid white;
 }
 #vmicon, #goicon {
+  margin-top: 5px;
   margin-left: 5px;
   width: 4.7rem;
   height: 2.8rem;
@@ -48,7 +49,6 @@ opacity: 1;
 #accordionicons {
   margin: left;
   max-width: 60px;
-  padding: 10px;
 }
 
 #header {
