--- a/style.css
+++ b/style.css
@@ -31,18 +31,20 @@ background-color: #b4f3bd;
 opacity: 1;
 }
 
-#accordion-body-flex {
+/*#accordion-body-flex {
   display: flex;
   flex-wrap: wrap;
-}
+  padding: 10rem;
+}*/
 
 /*payment option icons*/
-#axicon, #mcicon, #vsicon, #ppicon, #dcicon, #apicon {
+#axicon, #mcicon, #vsicon, #ppicon, #dcicon, #apicon /*#vmicon, #goicon*/ {
   width: 5rem;
   height: 5rem;
 }
 #vmicon, #goicon {
   margin-left: 5px;
+  margin-top: 5px;
   width: 4.7rem;
   height: 2.8rem;
   border: 3px solid grey;
@@ -52,6 +54,7 @@ opacity: 1;
 #accordionicons {
   margin: left;
   max-width: 60px;
+  padding: 5px;
 }
 
 #header {
