Viewport, icon changes
Added min vh 100%. Fixes empty bottom space on large devices.
Removed AAN script. replaced with local asset.
Changed Veteran to Military discount.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@
   background-color: #e2b97d;
 }
 
+.body {
+  min-height: 100%vh;
+}
+
+h3 {
+  text-align: center;
+}
 /*background image of services and contact sections*/
 .row-header {
   margin: auto;
