--- a/style.css
+++ b/style.css
@@ -7,6 +7,26 @@
   min-height: 100%vh;
 }
 
+#header {
+  position: relative;
+  margin: auto;
+  width: 99%;
+  color: black;
+  font-family: 'Caveat', cursive;
+  text-align: center;
+  text-shadow: 2px 2px black;
+  background-image: linear-gradient(to bottom right, #203a09, #e3e4dd);
+  background-color: lightgrey;
+  background-size: auto;
+  border: 2px solid #f9d054;
+  border-radius: 60px;
+  padding: 20px;
+  opacity: 0.80;
+  animation-name: header;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+}
+
 h3 {
   color: rgb(91, 170, 54);
   text-align: center;
@@ -31,12 +51,12 @@ h3 {
 }
 
 button {
-  background-color: inherit;
+  background-color: rgb(162, 201, 148);
   opacity: 0.8;
 }
 
 button:hover {
-background-color: #b4f3bd;
+background-color: rgb(219, 232, 100);
 opacity: 1;
 }
 
@@ -59,26 +79,6 @@ opacity: 1;
   padding: 7px;
 }
 
-#header {
-  position: relative;
-  margin: auto;
-  width: 99%;
-  color: black;
-  font-family: 'Caveat', cursive;
-  text-align: center;
-  text-shadow: 2px 2px yellow;
-  background-image: linear-gradient(to bottom right, #203a09, #e3e4dd);
-  background-color: lightgrey;
-  background-size: auto;
-  border: 2px solid #f9d054;
-  border-radius: 60px;
-  padding: 20px;
-  opacity: 0.80;
-  animation-name: header;
-  animation-duration: 3s;
-  animation-fill-mode: forwards;
-}
-
 @keyframes header {
   0%   {top: -1000px}
   100% {top: 0px}
@@ -92,7 +92,7 @@ opacity: 1;
   color: white;
   font-weight: bolder;
   text-shadow: 1px 2px black;
-  background-image: linear-gradient(to bottom right, #203a09, #e3e4dd);
+  background-image: linear-gradient(to bottom right, rgb(62, 85, 47), rgb(100, 110, 92));
   background-color: lightgrey;
   border: 2px solid grey;
   border-radius: 20px;
