--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-#mainborder {
-  margin: auto;
-  background-color: #e2b97d;
-}
-
 .body {
   min-height: 100%vh;
 }
@@ -10,27 +5,24 @@
 #header {
   position: relative;
   margin: auto;
-  width: 99%;
-  color: black;
+  width: 90%;
   font-family: 'Caveat', cursive;
   text-align: center;
-  text-shadow: 2px 2px black;
-  background-image: linear-gradient(to bottom right, #203a09, #e3e4dd);
-  background-color: lightgrey;
-  background-size: auto;
-  border: 2px solid #f9d054;
+  text-shadow: 1px 1px #fcfcbd;
+  background-image: linear-gradient(to top right, #4b4d58, #e3e4dd);
+  border: 2px solid lightgrey;
   border-radius: 60px;
   padding: 20px;
-  opacity: 0.80;
+  opacity: 0.95;
   animation-name: header;
   animation-duration: 3s;
   animation-fill-mode: forwards;
 }
 
 h3 {
-  color: rgb(91, 170, 54);
+  color: #f7f7cc;
   text-align: center;
-  text-shadow: 1px 1px yellow;
+  text-shadow: 1px 1px #f9f8e0;
 }
 /*background image of services and contact sections*/
 .row-header {
@@ -40,7 +32,7 @@ h3 {
   background-repeat: no-repeat: round;
   background-size: cover;
   background-position: center;
-  border: 2px solid grey;
+  border: 2px solid lightgrey;
   border-radius: 20px;
   padding: 20px;
 }
@@ -51,32 +43,30 @@ h3 {
 }
 
 button {
-  background-color: rgb(162, 201, 148);
-  opacity: 0.8;
+  background-color: #e7df7e;
 }
 
 button:hover {
-background-color: rgb(219, 232, 100);
-opacity: 1;
+  background-color: #ebe9c9;
 }
 
 /*payment option icons*/
 #axicon, #mcicon, #vsicon, #ppicon, #dcicon, #apicon {
-  width: 5rem;
-  height: 5rem;
+  width: 5em;
+  height: 5em;
 }
 #vmicon, #goicon {
   margin-left: 5px;
   width: 4.7rem;
   height: 2.8rem;
-  border: 3px solid grey;
+  border: 3px solid lightgrey;
   border-radius: 7px;
 }
 
 #accordionicons {
   margin: left;
   max-width: 60px;
-  padding: 7px;
+  padding: 20px;
 }
 
 @keyframes header {
@@ -87,17 +77,16 @@ opacity: 1;
 #services {
   position: relative;
   margin: auto;
-  width: 85%;
+  width: 80%;
   text-align: center;
   color: white;
   font-weight: bolder;
-  text-shadow: 1px 2px black;
-  background-image: linear-gradient(to bottom right, rgb(62, 85, 47), rgb(100, 110, 92));
-  background-color: lightgrey;
-  border: 2px solid grey;
+  text-shadow: 1px 1px #fcfcbd;
+  background-image: linear-gradient(to bottom left, #4b4d58, #e3e4dd);
+  border: 2px solid lightgrey;
   border-radius: 20px;
   padding: 20px;
-  opacity: 0.80;
+  opacity: 0.90;
   animation-name: services;
   animation-duration: 3s;
   animation-fill-mode: forwards;
@@ -111,12 +100,12 @@ opacity: 1;
 #contact {
   position: relative;
   margin: auto;
-  width: 90%;
+  width: 80%;
   color: #01310c;
   text-align: center;
-  background-image: linear-gradient(to bottom right, #4b4d58, #e3e4dd);
-  background-color: lightgrey;
-  border: 2px solid grey;
+  text-shadow: 1px 1px #fcfcbd;
+  background-image: linear-gradient(to top right, #4b4d58, #e3e4dd);
+  border: 2px solid lightgrey;
   border-radius: 20px;
   padding: 10px;
   opacity: 0.90;
@@ -139,19 +128,20 @@ opacity: 1;
 }
 
 a:hover {
-  background-color: #b4f3bd;
+  background-color: #f3f4d8;
 }
 
 #legaldisclaim {
   margin: auto;
-  background-color: #e2b97d;
-  width: 75%;
+  background-image: linear-gradient(to bottom left, #4b4d58, #e3e4dd);
+  width: 70%;
   text-align: center;
+  text-shadow: 1px 1px #fcfcbd;
   background-size: auto;
-  border: 2px solid grey;
+  border: 2px solid lightgrey;
   border-radius: 20px;
   padding: 20px;
-  opacity: 0.7;
+  opacity: 0.9;
   margin-bottom: 10px;
   }
 
